# SentinelForge

./: .gitignore  Dockerfile  LICENSE  README.md  Recruiter_Email_Slingshot.md  SOTA_2026_EXECUTIVE_SUMMARY.md  config.py  db.py  docker-compose.yml  end_to_end_test.py  fetch_telemetry.py  fix.js  fix_drilldown.ps1  generate_sites.py  knowledge.py  main.py  process_real_frame.py  pyproject.toml  requirements.txt  run_benchmarks.py  vercel.json
.github/workflows/: ci.yml  deploy.yml
.vercel/: project.json
agents/: __init__.py
agents/tier1_cpp/: __init__.py  frame_architect.py  gpu_kernel_engineer.py  hardware_interface.py  plate_solver.py
agents/tier2_python/: __init__.py  anomaly_hunter.py  correlator.py  ml_trainer.py  pipeline_orchestrator.py
agents/tier3_testing/: __init__.py  benchmark_runner.py  data_simulator.py  regression_guard.py  shadow_validator.py
agents/tier4_deploy/: __init__.py  docker_builder.py  fault_responder.py  fleet_deployer.py  site_monitor.py
agents/tier5_mgmt/: __init__.py  code_reviewer.py  doc_writer.py  orchestrator.py  sprint_planner.py
api/: nlp.js
benchmarks/: benchmark_science.py
data/: sentinelforge.db
data/knowledge/: algorithms.json  equations.json  hardware.json
docs/: AUDIT_REPORT.md  INSPECTION_REPORT.md
docs/interview_prep/: interview_demo_script.md  slingshot_alignment.md  slingshot_gap_analysis.md
frontend/: dashboard.html  digital_twin.html  live_telemetry.json  sentinel_catalog.html  sentinel_catalog.js  sentinel_celestrak.js  sentinel_core.js  sentinel_custody.js  sentinel_drilldown.js  sentinel_globe_chat.js  sentinel_layout.js  sentinel_mobile.css  sentinel_ops.css  sentinel_ops.html  sentinel_portal.html  sentinel_portal.js  sentinel_redteam.js  sentinel_resilience.js  sentinel_slingshot_catalog.html  sentinel_slingshot_catalog.js  sentinel_slingshot_programmer.html  sentinel_slingshot_technician.html  sentinel_state.js  sentinel_table_enhance.js  sentinel_terminal.js  site_registry.json
models/: streak_det.onnx  streak_det.onnx.data  streak_det_best.pth
output/builds/: Dockerfile  alembic.ini  docker-compose.yml  k8s-manifests.yaml
output/builds/src/: CMakeLists.txt  anomaly_detect.py  autonomous.py  background.cu  batch_od.py  benchmark.py  calibration.cu  cloud_ingest.py  conjunction_screener.py  coordinate_frames.py  correlator.py  deploy.py  fits_handler.py  fno_benchmark.py  generate_training_artifacts.py  monitor.py  multi_sensor_fusion.py  observation_scheduler.py  orbit_propagator.py  photometry.cpp  plate_solver.cpp  regression_guard.py  sgp4_wrapper.py  simulate_frames.py  source_extract.py  streak_detect.cu  train_model.py
output/builds/src/api/: api_server.py  twin_ws.py
output/builds/src/cloud/: __init__.py  kafka_transport.py  postgis_catalog.py  schemas.py
output/builds/src/core/: async_kafka_consumer.py  telemetry_metrics.py
output/builds/src/cpp/: photometry.cpp  plate_solver.cpp
output/builds/src/cuda/: calibration.cu  streak_detect.cu
output/builds/src/data/: event_stream.py
output/builds/src/hardware/: ascom_hal.py
output/builds/src/ops/: catalog_lifecycle.py  conjunction_decision.py  covariance_realism.py
output/builds/src/science/: __init__.py  bayesian_iod.py  cislunar_dynamics.py  data_assimilation_engine.py  eop_loader.py  fourier_neural_operator.py  graph_associator.py  gravity_field.py  koopman_propagator.py  light_curve_analyzer.py  non_gaussian_pc.py  pinn_orbit.py  rcs_fusion.py  spectral_characterizer.py  srp_estimator.py  thermospheric_model.py
output/builds/src/test_data/fits_test/: frame_000042.json  frame_000042.raw
output/reports/: adr_001_edge_architecture.md  api_documentation.md
output/training_artifacts/: FNO_VS_SGP4_BENCHMARK.md  TRAINING_SUMMARY.md  fno_propagator_model_card.md  (+10 more)
terraform/: main.tf
tests/: test_science_modules.py
(+1 files in other folders)
