[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelforge"
version = "1.0.0"
description = "20-Agent Space Surveillance Engineering System — Edge-to-Cloud SDA Pipeline"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Karl David", email = "karl@khamenterprises.com"},
]
keywords = ["space-domain-awareness", "satellite-tracking", "orbital-mechanics", "PINN", "edge-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.24,<2.1",
    "torch>=2.0,<2.6",
]

[project.optional-dependencies]
cloud = [
    "fastapi>=0.100,<0.120",
    "uvicorn>=0.23,<0.35",
    "websockets>=11.0,<14.0",
]
science = [
    "scipy>=1.11,<1.15",
    "astropy>=5.3,<7.0",
]
ml-export = [
    "onnx>=1.14,<1.18",
    "onnxruntime>=1.15,<1.21",
]
streaming = [
    "confluent-kafka>=2.3,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "avro-python3>=1.10,<2.0",
]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
all = [
    "sentinelforge[cloud,science,ml-export,dev]",
]

[project.urls]
Homepage = "https://github.com/KARLalpha4768/SentinelForge"
Repository = "https://github.com/KARLalpha4768/SentinelForge"

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["end_to_end_test.py", "test_*.py"]
